@@ -2,13 +2,15 @@
 # CHANGES - change log  of OTRS
 # Copyright (C) 2001-2006 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CHANGES,v 1.209.2.28 2006-01-29 23:41:05 martin Exp $
+# $Id: CHANGES,v 1.209.2.29 2006-01-31 19:44:25 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
 # --
 2.0.5 (2006/??/??)
+ - (2006/01/30) added <OTRS_TICKET_*> and <OTRS_CONFIG_*> support to
+    auto respons templates
  - (2006/01/29) fixed/removed wrong config option
     "Ticket::Frontend::QueueSortDefault", added own config option for
     StatusView of tickets
